# Observable-Library

./: .gitignore  CNAME  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: 404.md  api.md  concepts.md  conf.py  index.md  installation.md  limitations.md  quickstart.md  usage.md
docs/_static/css/: site.css  tokens.css
docs/_static/js/: site.js
docs/_templates/components/: language-switcher.html  navbar-logo.html  navbar-nav.html  sidebar-nav.html
docs/_templates/sections/: footer.html
docs/locale/zh_CN/LC_MESSAGES/: 404.po  api.po  concepts.po  index.po  installation.po  limitations.po  quickstart.po  usage.po
examples/: cnn_online.py  custom_gradient_online.py  mlp_online.py  offline_file.py  small_transformer_online.py
observable_library/: __init__.py
observable_library/filter/: __init__.py  base.py  identity.py
observable_library/generator/: __init__.py  api.py  composer.py  introspector.py  matcher.py  resolver.py
observable_library/observable/: __init__.py  observable.py  pack.py  registry.py  spec.py  temporal.py
observable_library/runtime/: __init__.py  analyzer.py  runtime.py  scheduler.py
observable_library/storage/: __init__.py  local.py  protocol.py  query.py
observable_library/tensor/: __init__.py  source.py  typed_tensor.py
scripts/: build_docs.py  publish_docs.sh  verify_release_artifacts.py
tests/: conftest.py  test_ci_workflow.py  test_docs_and_examples.py  test_filter_base.py  test_generate_api.py  test_generator_pipeline.py  test_hook_source.py  test_identity_filter.py  test_local_storage.py  test_observable.py  test_observable_correctness.py  test_observable_count.py  test_observable_registry.py  test_observable_spec.py  test_offline_analyzer.py  test_offline_sources.py  test_pack_and_query.py  test_package_metadata.py  test_public_api_docstrings.py  test_publish_workflow.py  test_pytorch_introspection.py  test_pytorch_runtime_smoke.py  test_runtime.py  test_runtime_errors.py  test_runtime_scheduler.py  test_runtime_tensor_source.py  test_temporal_operators.py  test_tensor_source_protocol.py  test_training_loop_smoke.py  test_typed_tensor.py  test_value_sink_protocol.py  test_verify_release_artifacts.py  test_web_docs.py
tests/fixtures/: downstream_typing.py  inspect_distributions.py
tests/integration/: test_product_foundation.py
tests/performance/: test_instrumentation_overhead_and_trajectory.py
