[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "observable-library"
version = "0.1.0"
description = "Headless Python package for generating and computing training observables."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "torch>=2.4.1"]
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Jinxin"}]

[project.urls]
Homepage = "https://github.com/MetaCircleAI/Observable-Library"
Documentation = "https://github.com/MetaCircleAI/Observable-Library/blob/main/docs/api.md"
Repository = "https://github.com/MetaCircleAI/Observable-Library"
Issues = "https://github.com/MetaCircleAI/Observable-Library/issues"

[project.optional-dependencies]
dev = ["build>=1.2", "mypy>=1.10", "pytest>=8", "ruff>=0.6", "tomli>=2; python_version < '3.11'"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[tool.setuptools.packages.find]
include = ["observable_library*"]

[tool.setuptools.package-data]
observable_library = ["py.typed"]
